--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     # 1. Checkout the code from the repository
     - name: Checkout code
@@ -30,10 +29,33 @@ jobs:
         pip install -r requirements.txt
 
     # 3. Run tests
-    - name: Run unit tests
-      run: |
-        pytest tests/test_unitaires.py
+#    - name: Run unit tests
+#      run: |
+#        pytest tests/test_unitaires.py
 
-    - name: Run integration tests
-      run: |
-        pytest tests/test_integration.py
+#    - name: Run integration tests
+#      run: |
+#        pytest tests/test_integration.py
+
+docker_build_and_push:
+  needs: build
+  runs-on: ubuntu-latest
+  steps:
+  # 1. Checkout code again
+  - name: Checkout code
+    uses: actions/checkout@v2
+
+  # 2. Log in to Docker Hub
+  - name: Log in to Docker Hub
+    uses: docker/login-action@v2
+    with:
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_PASSWORD }}
+
+  # 3. Build the Docker image
+  - name: Build Docker image
+    run: docker build -t ${{ secrets.DOCKER_USERNAME }}/Flask_app_Johanna:latest .
+
+  # 4. Push the image to Docker Hub
+  - name: Push Docker image
+    run: docker push ${{ secrets.DOCKER_USERNAME }}/Flask_app_Johanna:latest        
