--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install -g renovate
 
       - name: Run Renovate
-        run: renovate <username>/<repository_name> # --autodiscover
+        run: renovate johannafoolchand/formation-devops-training
         env:
           RENOVATE_CONFIG_FILE: renovate.json
           RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
