--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: CI/CD demo
+name: CI
 
 on:
   push:
@@ -29,8 +29,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/demo:${{ steps.set_version.outputs.app_version }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/demo:${{ steps.set_version.outputs.app_version }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/Flask_app_Johanna:${{ steps.set_version.outputs.app_version }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/Flask_app_Johanna:${{ steps.set_version.outputs.app_version }}
   tests_unitaires:
     name: Run Unit Tests
     runs-on: ubuntu-latest
@@ -57,21 +57,21 @@ jobs:
       - name: Build and run Docker containers
         run: |
           mkdir -p postgresql_data
-          docker-compose -f docker-compose-dev.yml build 
-          docker-compose -f docker-compose-dev.yml up -d
+          docker-compose -f docker-compose.yml build 
+          docker-compose -f docker-compose.yml up -d
           sleep 10
 
       - name: Show containers
         run: |
-          docker-compose -f docker-compose-dev.yml up -d
-          docker-compose -f docker-compose-dev.yml ps
-          docker-compose -f docker-compose-dev.yml logs
+          docker-compose -f docker-compose.yml up -d
+          docker-compose -f docker-compose.yml ps
+          docker-compose -f docker-compose.yml logs
           docker network ls
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
 
-          docker-compose -f docker-compose-dev.yml ps
+          docker-compose -f docker-compose.yml ps
       #    docker exec -i formation-devops-training-web-1 python -m pip install -r /app/requirements.txt
 
       
@@ -124,12 +124,6 @@ jobs:
         run: |
           export APP_VERSION=$(date +%Y%m%d%H%M%S)
           mkdir postgresql_data
-          docker-compose -f docker-compose-dev.yml build
-          docker-compose -f docker-compose-dev.yml up -d
+          docker-compose -f docker-compose.yml build
+          docker-compose -f docker-compose.yml up -d
           sleep 5
-      - name: Show containers
-        run: |
-          
-          docker-compose -f docker-compose-dev.yml ps
-      - name: Kill containers
-        run: ./killcontainers
