--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,9 @@ services:
   web:
     image: johannafld/flask_app_johanna:${APP_VERSION} 
     build: .
-    environment:
-      - DB_HOST=db
     ports:
       - "5000:5000"
     volumes:
-     - ./app.py:/app/app.py
-    depends_on:
-      - db
+     - ./main.py:/app/main.py
     
- 
-  db:
-    image: postgres:latest
-    restart: always
-    environment:
-      POSTGRES_DB: mydatabase
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-    ports:
-      - "5432:5432"
-    volumes:
-      - $HOME/postgresql_data:/var/lib/postgresql/data
     
