--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,15 @@ services:
     volumes:
      - ./main.py:/app/main.py
     
-    
+  db:
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_DB: mydatabase
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
+    ports:
+      - "5432:5432"
+    volumes:
+      - $HOME/postgresql_data:/var/lib/postgresql/data
+        
