--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -110,6 +110,7 @@ jobs:
       - name: Build and run Docker container        
         run: |
           export APP_VERSION=$(date +%Y%m%d%H%M%S)
+          mkdir -p postgresql_data
           docker-compose -f docker-compose.yml build
           docker-compose -f docker-compose.yml up -d
         
