--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -78,6 +78,8 @@ jobs:
             -v $PWD:/opt/formation-devops-training \
             -w /opt/formation-devops-training \
             python:3.10-slim bash
+          docker exec -i unit_tests ls  
+          docker exec -i unit_tests pwd
           docker exec -i unit_tests python3 -m pip install -r requirements.txt
           docker exec -i unit_tests python3 /opt/formation-devops-training/tests_main.py
 
