--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
       - "5000:5000"
     volumes:
      - ./main.py:/app/main.py
-    
+    depends_on:
+      - db
+          
   db:
     image: postgres:latest
     restart: always
