--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,11 @@ services:
 
   db:
     image: postgres:latest
-    restart: always
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "myuser"]
+      interval: 10s
+      retries: 5    
+      restart: always
     environment:
       POSTGRES_DB: mydatabase
       POSTGRES_USER: myuser
