--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,21 @@
+version: '3'
 
 services:
   web:
     image: johannafld/flask_app_johanna:${APP_VERSION} 
     build: .
     environment:
-      - DB_HOST=db  
-      - DB_NAME=mydatabase
-      - DB_USER=myuser
-      - DB_PASS=mypassword
+      - DB_HOST=db
     ports:
       - "5000:5000"
     volumes:
-     - ./main.py:/app/main.py
+      - ./main.py:/app/main.py
     depends_on:
       - db
-
+    
+ 
   db:
     image: postgres:latest
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "myuser"]
-      interval: 10s
-      retries: 5    
     restart: always
     environment:
       POSTGRES_DB: mydatabase
@@ -30,3 +25,4 @@ services:
       - "5432:5432"
     volumes:
       - $HOME/postgresql_data:/var/lib/postgresql/data
+    
