--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       - ./main.py:/app/main.py
     depends_on:
       - db
-    
+    networks:
+      - app-network    
  
   db:
     image: postgres:latest
@@ -25,4 +26,9 @@ services:
       - "5432:5432"
     volumes:
       - $HOME/postgresql_data:/var/lib/postgresql/data
-    
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
