--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -79,13 +79,13 @@ jobs:
             -v $PWD:/opt/formation-devops-training \
             -w /opt/formation-devops-training \
             python:3.10-slim bash
-          docker exec -i unit_tests ls  
-          docker exec -i unit_tests pwd
           docker exec -i unit_tests python3 -m pip install -r requirements.txt
           docker exec -i unit_tests python3 /opt/formation-devops-training/tests_main.py
 
       - name: Run integration test
         run: |
+          docker exec -i unit_tests ping db
+          docker network inspect formation-devops-training_default
           sudo chown -R $USER:$USER /home/runner/work/formation-devops-training/
           sudo chmod 755 /home/runner/work/formation-devops-training
           pytest test_e2e.py
