--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     volumes:
      - ./main.py:/app/main.py
     depends_on:
-      - db
-    
+      - db:
+          condition: service_healthy
  
   db:
     image: postgres:latest
