--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,7 @@ services:
 
   db:
     image: postgres:latest
-    deploy:
-      restart_policy:
-        condition: on-failure
-    restart: on-failure
+    options: --user root
     environment:
       POSTGRES_DB: mydatabase
       POSTGRES_USER: myuser
