--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "5000:5000"
     volumes:
-     - ./main.py:/app/main.py
+     - ./app.py:/app/app.py
     depends_on:
       - db
 
