--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,13 @@ services:
 
   db:
     image: postgres:latest
+    restart: always
     environment:
       POSTGRES_DB: mydatabase
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
     ports:
       - "5432:5432"
-
+    volumes:
+      - $HOME/postgresql_data:/var/lib/postgresql/data
+    
