--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 
 services:
 
-
   db:
     image: postgres:latest
     restart: always
@@ -14,3 +13,14 @@ services:
     volumes:
       - $HOME/postgresql_data:/var/lib/postgresql/data
     
+  web:
+    image:  johannafld/flask_app_johanna:${APP_VERSION}
+    build: .
+    environment:
+      - DB_HOST=db
+    ports:
+      - "5000:5000"
+    volumes:
+     - ./app.py:/app/app.py
+    depends_on:
+      - db
