--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.3
 Flask-SQLAlchemy==3.0.2
-psycopg2-binary
+psycopg2-binary==3.2.2
+pytest==8.3.3
 flask_testing==0.8.1
-pytest==8.0.1
-requests==2.31.0
-prometheus_client
+requests==2.32.3
+prometheus_client==0.20.0
