--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-
+OVH_APPLICATION_KEY=1cb86f5e44e80c41
+OVH_APPLICATION_SECRET=22361159d5741f177188a68d404bcc11
+OVH_CONSUMER_KEY=59540ac830282fe00f83162c363c6d2f
